--- a/cmake_modules/CMakeLists.txt
+++ b/cmake_modules/CMakeLists.txt
@@ -7,6 +7,7 @@ ExternalProject_Add(
     catch
     PREFIX ${CMAKE_BINARY_DIR}/catch
     GIT_REPOSITORY https://github.com/philsquared/Catch.git
+    GIT_TAG v1.7.0
     TIMEOUT 10
     UPDATE_COMMAND ${GIT_EXECUTABLE} pull
     CONFIGURE_COMMAND ""
