--- a/cmake_modules/CMakeLists.txt
+++ b/cmake_modules/CMakeLists.txt
@@ -1,24 +1,7 @@
 cmake_minimum_required(VERSION 3.6)
 
-include(ExternalProject)
-find_package(Git REQUIRED)
-
-ExternalProject_Add(
-    catch
-    PREFIX ${CMAKE_BINARY_DIR}/catch
-    GIT_REPOSITORY https://github.com/philsquared/Catch.git
-    GIT_TAG v1.7.0
-    TIMEOUT 10
-    UPDATE_COMMAND ${GIT_EXECUTABLE} pull
-    CONFIGURE_COMMAND ""
-    BUILD_COMMAND ""
-    INSTALL_COMMAND ""
-    LOG_DOWNLOAD ON
-   )
-
-# Expose required variable (CATCH_INCLUDE_DIR) to parent scope
-ExternalProject_Get_Property(catch source_dir)
-set(CATCH_INCLUDE_DIR ${source_dir}/include
+set(3RD_PARTY_DIR ${PROJECT_SOURCE_DIR}/3rdparty)
+set(CATCH_INCLUDE_DIR ${3RD_PARTY_DIR}/Catch2/single_include
     CACHE INTERNAL "Path to include folder for Catch")
 
 add_library(Catch INTERFACE)
